sumo/tests/sumo/errors/network/edge/cedge/root__edge__cedge#id__false1/errors.sumo
Error: Trying to reference an unknown edge ('a') in edge '1'.
Quitting (on error).
